--- a/css/bio.css
+++ b/css/bio.css
@@ -3,7 +3,7 @@ h1{
   font-family:optima;
   text-align:center;
   color:red;
-  Background:#FFBF00;
+  Background:#FAD5A5;
 }
 p{
   font-size:28px;
