--- a/css/bio.css
+++ b/css/bio.css
@@ -1,3 +1,15 @@
+div{
+  background-color:silver;
+  font-size:24px;
+  color:black;
+  font-family:optima;
+  font-weight: bold;
+}
+a{
+  color:black;
+  text-align: center;
+  padding: 16px 20px;
+}
 h1{
   font-size:32px;
   font-family:optima;
@@ -10,4 +22,14 @@ p{
   font-family:optima;
   text-align:center;
   display: block;
+}
+img{
+  width: 450px;
+  border-radius: 50px;
+  margin-right: 20px;
+  margin-top: : 100px;
+}
+center{
+  margin-top: 50px;
+
 }
